--- a/rankanim-api/package.json
+++ b/rankanim-api/package.json
@@ -9,6 +9,7 @@
   "author": "Exostars476",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.2.0"
   }
 }
