--- a/rankanim-api/package.json
+++ b/rankanim-api/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^8.2.0"
+  },
+  "devDependencies": {
+    "prettier": "3.2.5"
   }
 }
